# Vistio

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  WORKLOG.md  test_proj2.py
crates/vistio-bench/: Cargo.toml
crates/vistio-bench/src/: lib.rs  metrics.rs  runner.rs  scenarios.rs
crates/vistio-bench/tests/: bench_tests.rs
crates/vistio-cli/: Cargo.toml
crates/vistio-cli/src/: commands.rs  main.rs
crates/vistio-contact/: Cargo.toml
crates/vistio-contact/src/: barrier.rs  box_collider.rs  broad.rs  collision_pipeline.rs  coloring.rs  contact.rs  cylinder.rs  exclusion.rs  ground_plane.rs  lib.rs  narrow.rs  projection.rs  response.rs  self_collision.rs  spatial_hash.rs  sphere.rs  vertex_triangle.rs
crates/vistio-contact/src/tests/: barrier_tests.rs
crates/vistio-contact/tests/: contact_tests.rs
crates/vistio-debug/: Cargo.toml
crates/vistio-debug/src/: hooks.rs  lib.rs  snapshot.rs
crates/vistio-debug/tests/: debug_tests.rs
crates/vistio-gpu/: Cargo.toml
crates/vistio-gpu/src/: backend.rs  buffers.rs  lib.rs
crates/vistio-gpu/tests/: gpu_tests.rs
crates/vistio-io/: Cargo.toml
crates/vistio-io/src/: contract.rs  lib.rs  validator.rs
crates/vistio-io/tests/: io_tests.rs
crates/vistio-material/: Cargo.toml
crates/vistio-material/src/: anisotropic.rs  corotational.rs  database.rs  isotropic.rs  lib.rs  orthotropic.rs  properties.rs  traits.rs
crates/vistio-material/tests/: material_tests.rs
crates/vistio-math/: Cargo.toml
crates/vistio-math/src/: decomposition.rs  faer_solver.rs  lib.rs  mat3x2.rs  sparse.rs
crates/vistio-math/tests/: math_tests.rs
crates/vistio-mesh/: Cargo.toml
crates/vistio-mesh/src/: generators.rs  lib.rs  mesh.rs  normals.rs  topology.rs
crates/vistio-mesh/tests/: mesh_tests.rs
crates/vistio-render/: Cargo.toml
crates/vistio-render/src/: json_exporter.rs  lib.rs  renderer.rs
crates/vistio-render/tests/: render_tests.rs
crates/vistio-solver/: Cargo.toml
crates/vistio-solver/src/: assembly.rs  bending.rs  config.rs  discrete_shells.rs  element.rs  lib.rs  pd_solver.rs  pd_stub.rs  state.rs  strategy.rs
crates/vistio-solver/tests/: solver_tests.rs
crates/vistio-telemetry/: Cargo.toml
crates/vistio-telemetry/src/: bus.rs  events.rs  lib.rs  sinks.rs
crates/vistio-telemetry/tests/: telemetry_tests.rs
crates/vistio-types/: Cargo.toml
crates/vistio-types/src/: constants.rs  error.rs  ids.rs  lib.rs  scalar.rs
crates/vistio-types/tests/: types_tests.rs
crates/vistio-viewer/: Cargo.toml
crates/vistio-viewer/src/: lib.rs
docs/: WORKLOG.md
tools/: analyze_bounce.py  test_bending_stencil.py  test_proj.py  test_stencil.rs  test_stencil2.py  test_stencil3.py
