[workspace]
resolver = "2"
members = [
    "crates/vistio-types",
    "crates/vistio-math",
    "crates/vistio-mesh",
    "crates/vistio-material",
    "crates/vistio-solver",
    "crates/vistio-contact",
    "crates/vistio-gpu",
    "crates/vistio-bench",
    "crates/vistio-debug",
    "crates/vistio-telemetry",
    "crates/vistio-io",
    "crates/vistio-render",
    "crates/vistio-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"

[workspace.dependencies]
# Foundation
glam = { version = "0.29", features = ["serde"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"

# GPU
wgpu = "24"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Testing
approx = "0.5"

# Sparse linear algebra
faer = "0.24"
