[package]
name = "vistio-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Benchmark suite and measurement framework for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
vistio-math = { path = "../vistio-math" }
vistio-mesh = { path = "../vistio-mesh" }
vistio-material = { path = "../vistio-material" }
vistio-solver = { path = "../vistio-solver" }
vistio-contact = { path = "../vistio-contact" }
vistio-telemetry = { path = "../vistio-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
