[package]
name = "vistio-contact"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Collision detection and contact response (BVH, IPC barriers) for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
vistio-math = { path = "../vistio-math" }
vistio-mesh = { path = "../vistio-mesh" }
vistio-solver = { path = "../vistio-solver" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
