[package]
name = "vistio-io"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "I/O contract, mesh loading (glTF/OBJ), and input validation for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
vistio-mesh = { path = "../vistio-mesh" }
vistio-material = { path = "../vistio-material" }
serde = { workspace = true }
serde_json = { workspace = true }
