[package]
name = "vistio-math"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Linear algebra primitives, decompositions, and sparse matrix operations for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
glam = { workspace = true }
serde = { workspace = true }
faer = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
