[package]
name = "vistio-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Triangle mesh representation, topology queries, and SoA buffers for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
vistio-math = { path = "../vistio-math" }
serde = { workspace = true }
