[package]
name = "vistio-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pluggable rendering abstraction for Vistio."

[dependencies]
vistio-types = { path = "../vistio-types" }
vistio-mesh = { path = "../vistio-mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
